InputGroup: Add categories list. - Category: Add remove function. - Fix input appearances on iOS.

--- a/components/input-group/index.module.scss
+++ b/components/input-group/index.module.scss
@@ -26,7 +26,65 @@
         }
     }
 
-    ul {
+    .found-categories-container {
+        position: relative;
+        width: 100%;
+
+        ul {
+            background-color: white;
+            border: var(--border);
+            display: none;
+            flex-direction: column;
+            list-style-type: none;
+            margin: 0;
+            max-height: calc(var(--input-height) * 3.8);
+            overflow: scroll;
+            padding: 0;
+            position: absolute;
+            top: -2px;
+            width: 100%;
+            z-index: var(--z-index-category-list);
+
+            &.show {
+                display: flex;
+            }
+
+            li {
+                align-items: center;
+                cursor: pointer;
+                display: flex;
+                gap: var(--spacing-2);
+                justify-content: space-between;
+                padding: var(--spacing-2) var(--spacing-4);
+
+                &:hover {
+                    background-color: var(--list-item-background-color-hover);
+                }
+
+                &.hide {
+                    display: none;
+                }
+
+                &.none-found {
+                    background-color: white;
+                    cursor: default;
+                }
+
+                svg {
+                    pointer-events: none;
+                    visibility: hidden;
+                }
+
+                &[aria-pressed='true'] {
+                    svg {
+                        visibility: visible;
+                    }
+                }
+            }
+        }
+    }
+
+    .selected-categories {
         display: flex;
         flex-wrap: wrap;
         gap: var(--spacing-2);
