--- a/styles/global.scss
+++ b/styles/global.scss
@@ -15,6 +15,7 @@ html {
     padding: 0;
 
     body {
+        background-color: var(--page-background);
         margin: 0;
         padding: var(--spacing-5) var(--spacing-5) calc(var(--nav-height) + (calc(var(--spacing-5) * 2)));
         text-align: center;
@@ -79,8 +80,10 @@ details {
 
 button,
 input[type='submit'] {
+    appearance: none;
     background-color: var(--color-grey-900);
     border: var(--border);
+    border-radius: 0;
     color: white;
     cursor: pointer;
     font-family: var(--font-family);
@@ -288,6 +291,8 @@ input {
 
     &[type='search'],
     &[type='text'] {
+        appearance: none;
+        background-color: white;
         border: var(--border);
         border-radius: 0;
         color: var(--color-grey-900);
